--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
   },
   "homepage": "https://github.com/akadirdev/dorm#readme",
   "dependencies": {
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.25",
     "@types/pg": "^8.6.5",
+    "@types/uuid": "^8.3.4",
     "pg": "^8.7.3",
     "typescript": "^4.6.3"
   },
