--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "@types/node": "^17.0.25",
     "@types/pg": "^8.6.5",
     "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
+    "eslint": "^8.26.0",
     "pg": "^8.7.3",
     "typescript": "^4.6.3"
   },
