--- a/.npmignore
+++ b/.npmignore
@@ -2,5 +2,15 @@ src/
 node_modules/
 .env
 .vscode
+dist/__tests__/
+.eslintrc
+.eslintignore
+.gitignore
+.npmignore
 public/
+tsconfig.json
+package-lock.json
+.mocharc.json
+coverage
 .circleci
+.nyc_output
