--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,11 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "declaration": true,
+    "sourceMap": true,
     "module": "commonjs",
     "target": "es2020",
-    "lib": ["es2020"]
+    "lib": ["es2020"],
+    "esModuleInterop": true,
+    "moduleResolution": "Node"
   }
 }
